[gd_scene load_steps=24 format=2]

[ext_resource path="res://Menu/justabit.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/LevelMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=18]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=19]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=20]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=21]
size = 98
font_data = ExtResource( 1 )

[node name="LevelMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 658.0
margin_top = 33.0
margin_right = 1262.0
margin_bottom = 1046.0
custom_constants/separation = -5

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 604.0
margin_bottom = 112.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 10.0
margin_right = 594.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
text = "Select Level"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 604.0
margin_bottom = 1013.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 604.0
margin_bottom = 906.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 300.0
margin_bottom = 906.0

[node name="Level1" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 87.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1

[node name="Level2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_top = 91.0
margin_right = 300.0
margin_bottom = 178.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 3 )
text = "2"
align = 1
valign = 1

[node name="Level3" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 300.0
margin_bottom = 269.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 4 )
text = "3"
align = 1
valign = 1

[node name="Level4" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_top = 273.0
margin_right = 300.0
margin_bottom = 360.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 5 )
text = "4"
align = 1
valign = 1

[node name="Level5" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_top = 364.0
margin_right = 300.0
margin_bottom = 451.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 6 )
text = "5"
align = 1
valign = 1

[node name="Level6" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_top = 455.0
margin_right = 300.0
margin_bottom = 542.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 7 )
text = "6"
align = 1
valign = 1

[node name="Level7" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_top = 546.0
margin_right = 300.0
margin_bottom = 633.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 8 )
text = "7"
align = 1
valign = 1

[node name="Level8" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_top = 637.0
margin_right = 300.0
margin_bottom = 724.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 9 )
text = "8"
align = 1
valign = 1

[node name="Level9" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_top = 728.0
margin_right = 300.0
margin_bottom = 815.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 10 )
text = "9"
align = 1
valign = 1

[node name="Level10" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_top = 819.0
margin_right = 300.0
margin_bottom = 906.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 11 )
text = "10"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 304.0
margin_right = 604.0
margin_bottom = 906.0

[node name="Level11" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer2"]
margin_right = 300.0
margin_bottom = 87.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 12 )
text = "11"
align = 1
valign = 1

[node name="Level12" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 91.0
margin_right = 300.0
margin_bottom = 178.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 13 )
text = "12"
align = 1
valign = 1

[node name="Level13" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 182.0
margin_right = 300.0
margin_bottom = 269.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 14 )
text = "13"
align = 1
valign = 1

[node name="Level14" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 273.0
margin_right = 300.0
margin_bottom = 360.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 15 )
text = "14"
align = 1
valign = 1

[node name="Level15" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 364.0
margin_right = 300.0
margin_bottom = 451.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 16 )
text = "15"
align = 1
valign = 1

[node name="Level16" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 455.0
margin_right = 300.0
margin_bottom = 542.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 17 )
text = "16"
align = 1
valign = 1

[node name="Level17" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 546.0
margin_right = 300.0
margin_bottom = 633.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 18 )
text = "17"
align = 1
valign = 1

[node name="Level18" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 637.0
margin_right = 300.0
margin_bottom = 724.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 19 )
text = "18"
align = 1
valign = 1

[node name="Level19" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 728.0
margin_right = 300.0
margin_bottom = 815.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 20 )
text = "19"
align = 1
valign = 1

[node name="Level20" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 819.0
margin_right = 300.0
margin_bottom = 906.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 21 )
text = "20"
align = 1
valign = 1
